--- a/css/index.css
+++ b/css/index.css
@@ -46,9 +46,34 @@
     font-family: var(--fuenteUno)
 }
 
+.info {
+    color: var(--colorDos);
+    font-size: 125%; 
+    font-weight: bold;
+    text-align:start;
+    text-shadow: 1.5px 1.5px 0.5px grey;
+    font-family: var(--fuenteUno)
+}
+
 .contenedorCentral {
     display:flex;
     justify-content: center;
-
 }
 
+.pie {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content:flex-start;
+    align-items: center;
+    max-width: 100vw;
+    height: 20vh;
+    border-top: 1px solid gray;
+}
+
+.logo {
+    height: 7vh;
+    width: auto;
+    border: 1px solid gray;
+    border-radius: 50%;
+    padding: 4px;
+}
